chandeliers-lus/tests/compile_fail/ui/tc/all-stmts.stderr
error: Binary operator `=` expects arguments of the same type
 --> tests/compile_fail/ui/tc/all-stmts.rs:6:16
  |
6 |         assert 1 = true;
  |                ^^^^^^^^
  |
note: The left-hand-side is found to be of type int
 --> tests/compile_fail/ui/tc/all-stmts.rs:6:16
  |
6 |         assert 1 = true;
  |                ^
note: The right-hand-side is found to be of type bool
 --> tests/compile_fail/ui/tc/all-stmts.rs:6:20
  |
6 |         assert 1 = true;
  |                    ^^^^

error: Binary operator `+` expects arguments of the same type
 --> tests/compile_fail/ui/tc/all-stmts.rs:7:17
  |
7 |         assert (1 + true) = (2 + true);
  |                 ^^^^^^^^
  |
note: The left-hand-side is found to be of type int
 --> tests/compile_fail/ui/tc/all-stmts.rs:7:17
  |
7 |         assert (1 + true) = (2 + true);
  |                 ^
note: The right-hand-side is found to be of type bool
 --> tests/compile_fail/ui/tc/all-stmts.rs:7:21
  |
7 |         assert (1 + true) = (2 + true);
  |                     ^^^^

error: Binary operator `+` expects arguments of the same type
 --> tests/compile_fail/ui/tc/all-stmts.rs:7:30
  |
7 |         assert (1 + true) = (2 + true);
  |                              ^^^^^^^^
  |
note: The left-hand-side is found to be of type int
 --> tests/compile_fail/ui/tc/all-stmts.rs:7:30
  |
7 |         assert (1 + true) = (2 + true);
  |                              ^
note: The right-hand-side is found to be of type bool
 --> tests/compile_fail/ui/tc/all-stmts.rs:7:34
  |
7 |         assert (1 + true) = (2 + true);
  |                                  ^^^^

error: Binary operator `=` expects arguments of type int or bool, not float because equality on float is not reliable
 --> tests/compile_fail/ui/tc/all-stmts.rs:8:16
  |
8 |         assert 0.1 = 0.2;
  |                ^^^^^^^^^
  |
note: The left-hand-side is found to be of type float
 --> tests/compile_fail/ui/tc/all-stmts.rs:8:16
  |
8 |         assert 0.1 = 0.2;
  |                ^^^
note: The right-hand-side is found to be of type float
 --> tests/compile_fail/ui/tc/all-stmts.rs:8:22
  |
8 |         assert 0.1 = 0.2;
  |                      ^^^
